feat: stoppedAt is no longer nullable (will just be empty)
