# openapi.json
@@ -1,5 +1,5 @@
 {
-    "openapi": "3.0.0",
+    "openapi": "3.0.3",
     "info": {
         "title": "Hourly API",
         "version": "0.0.1",
@@ -85,16 +85,17 @@
                     "id": 104594,
                     "at": "2019-01-01",
                     "billable": true,
-                    "description": "Cleaning building A - top floor",
-                    "started_at": "2019-01-01T08:00:00Z",
-                    "stopped_at": "2019-01-01T12:00:00Z"
+                    "description": "Building A - top floor",
+                    "startedAt": "2019-01-01T08:00:00Z",
+                    "stoppedAt": "2019-01-01T12:00:00Z"
                 },
                 "required": [
                     "id",
                     "at",
                     "project",
                     "billable",
-                    "started_at"
+                    "startedAt",
+                    "stoppedAt"
                 ],
                 "properties": {
                     "id": {
@@ -109,11 +110,11 @@
                     "description": {
                         "type": "string"
                     },
-                    "started_at": {
+                    "startedAt": {
                         "type": "string",
                         "format": "date-time"
                     },
-                    "stopped_at": {
+                    "stoppedAt": {
                         "type": "string",
                         "format": "date-time"
                     },
